Fix UX of hybrid menus when overlapping with right screen edge

--- a/typedoc.css
+++ b/typedoc.css
@@ -8,6 +8,7 @@
 	--dark-color-text: #e9e9e9;
     --dark-color-contrast-text: #ffffff;
     --dark-color-text-aside: #c7c7c7;
+	--dark-code-background: #101316;
 }
 
 
